[package]
name = "mvar"
version = "0.1.0"
authors = ["Mitsutoshi Aoe <me@maoe.name>"]
license = "MIT OR Apache-2.0"
description = "A Rust port of Haskell's MVar"
repository = "https://github.com/maoe/mvar-rs"
homepage = "https://github.com/maoe/mvar-rs"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
edition = "2018"

[dependencies]
shuttle = { version = "0.6.0", optional = true }

[dev-dependencies]
