[package]
name = "mvar"
version = "0.1.0"
authors = ["Mitsutoshi Aoe <me@maoe.name>"]
license = "MIT OR Apache-2.0"
description = "A Rust port of Haskell's MVar"
repository = "https://github.com/maoe/mvar-rs"
homepage = "https://github.com/maoe/mvar-rs"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
edition = "2018"

[dependencies]
shuttle = { version = "0.6.0", optional = true }

[dev-dependencies]
criterion = "0.4.0"
crossbeam-channel = "0.5.1"

[[bench]]
name = "bench"
harness = false
